--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ button:hover {
 }
 
 .empty-state-unauthorized {
-  padding: 2.5rem;
+  padding: 2rem;
   color: #333;
   background-color: #f5f5f5; /* Light gray background */
   border: 1px solid #ddd;
@@ -432,4 +432,10 @@ button:hover {
   border-radius: 4px;
   margin: 10px 0;
   font-weight: bold;
+}
+
+.dueboard-org {
+
+  background-color: #ffebee;
+  color: #d32f2f;
 }
